--- a/admin.html
+++ b/admin.html
@@ -70,7 +70,7 @@
             $("#message").empty();
             $('#loading').show();
             $.ajax({
-                url: "upload.php", // Url to which the request is send
+                url: "php-action/upload.php", // Url to which the request is send
                 type: "POST",             // Type of request to be send, called as method
                 data: new FormData(this), // Data sent to server, a set of key/value pairs (i.e. form fields and values)
                 contentType: false,       // The content type used when sending data to the server.
